kubernetes/archive/deploy/proxies/internal/prowlarr/endpoint.yaml
kind: Endpoints
apiVersion: v1
metadata:
  name: prowlarr
subsets:
  - addresses:
      - ip: 192.168.3.40
    ports:
      - port: 9696
        name: http
