kubernetes/archive/deploy/proxies/internal/prowlarr/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  annotations:
    kubernetes.io/ingress.class: traefik-internal
  name: prowlarr
spec:
  entryPoints:
  - websecure
  routes:
  - kind: Rule
    match: Host(`prowlarr.vandeneede.org`)
    services:
    - name: prowlarr
      port: 9696
